--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.CDv9wEtd.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Bl0kN_x3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BFXFQeqM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C0hKXVE1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CkuYEdt1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.xiAKmmds.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6Do7W1n0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6uB67KNd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.n8DiqFOi.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.v_tQxDTl.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.ChSSSrLs.js"><title>BRMW - Modelagem de banco de dados online</title><!-- HEAD_svelte-1fc75qf_START --><meta property="og:url" content="https://brmodeloweb.com"><meta property="og:image" content="/ghp-test-2/_app/immutable/assets/og-preview._uapL7x9.png"><!-- HEAD_svelte-1fc75qf_END -->
@@ -20,18 +20,18 @@
 			
 			<script>
 				{
-					__sveltekit_1na38yk = {
+					__sveltekit_mf1xyp = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/ghp-test-2"
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null,null];
+					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Bl0kN_x3.js"),
-						import("./_app/immutable/entry/app.6Do7W1n0.js")
+						import("./_app/immutable/entry/start.C0hKXVE1.js"),
+						import("./_app/immutable/entry/app.6uB67KNd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
